src/k8s/tp16/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vllm-ingress
  namespace: vllm-kimi
  annotations:
spec:
  ingressClassName: cilium
  rules:
    - host: metr.romaingrx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vllm-api
                port:
                  number: 8000
